(lang dune 3.4)

(name bfinml)

(generate_opam_files true)

(source
 (github jwyjohn/bfml))

(authors "John Jiang")

(maintainers "John Jiang")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name bfinml)
 (synopsis "An implementation of brain f*ck in OCaml")
 (description "An implementation of brain f*ck in OCaml")
 (depends ocaml dune)
 (tags
  (bf language)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
